# nvfp4-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  security.yml
crates/nvfp4-cli/: Cargo.toml
crates/nvfp4-core/: Cargo.toml
crates/nvfp4-core/src/: e2m1.rs  e4m3.rs  error.rs  lib.rs  tensor.rs
crates/nvfp4-core/tests/: nvidia_reference.rs
crates/nvfp4-cuda/: Cargo.toml
crates/nvfp4-py/: Cargo.toml
scripts/: preflight.sh
