[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.93.0"
repository = "https://github.com/notAnIssue/nvfp4-rs"

[workspace.dependencies]
half = "2.7.1"
thiserror = "2.0.18"
bytemuck = "1.25.0"
clap = "4.6.1"
criterion = "0.8.2"
cudarc = "0.19.7"
proptest = "1.11.0"
pyo3 = "0.29.0"
rayon = "1.12.0"


[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
