[package]
name = "nvfp4-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "nvfp4-inspect"
path = "src/main.rs"


[dependencies]
nvfp4-core = { path = "../nvfp4-core" }
clap.workspace = true

[lints]
workspace = true
